deploy: f46cd74f04c9acb9aa9273b53d6df5c0d023aef2

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 06 Jul. 2023 -->
+<!-- 19 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My homepage with org-mode</title>
@@ -50,33 +50,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org5bd024f">
+<figure id="org4c0fb0d">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-org27daefb" class="outline-2">
-<h2 id="org27daefb">Introduction</h2>
-<div class="outline-text-2" id="text-org27daefb">
+<section id="outline-container-org69442c3" class="outline-2">
+<h2 id="org69442c3">Introduction</h2>
+<div class="outline-text-2" id="text-org69442c3">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org7a73afa" class="outline-2">
-<h2 id="org7a73afa">Implementation</h2>
-<div class="outline-text-2" id="text-org7a73afa">
+<section id="outline-container-org3a4d9d2" class="outline-2">
+<h2 id="org3a4d9d2">Implementation</h2>
+<div class="outline-text-2" id="text-org3a4d9d2">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org7ca756e" class="outline-2">
-<h2 id="org7ca756e">Usage</h2>
-<div class="outline-text-2" id="text-org7ca756e">
+<section id="outline-container-org8ca5f6f" class="outline-2">
+<h2 id="org8ca5f6f">Usage</h2>
+<div class="outline-text-2" id="text-org8ca5f6f">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -87,7 +87,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org9d399c3">
+<pre class="example" id="org54351e5">
 $ make
 </pre>
 
@@ -96,9 +96,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-orgc3d299c" class="outline-3">
-<h3 id="orgc3d299c">RSS Feeds</h3>
-<div class="outline-text-3" id="text-orgc3d299c">
+<div id="outline-container-org7b2ca27" class="outline-3">
+<h3 id="org7b2ca27">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org7b2ca27">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -155,13 +155,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-orgcd27769" class="outline-2">
-<h2 id="orgcd27769">Features</h2>
-<div class="outline-text-2" id="text-orgcd27769">
+<section id="outline-container-orge190af4" class="outline-2">
+<h2 id="orge190af4">Features</h2>
+<div class="outline-text-2" id="text-orge190af4">
 </div>
-<div id="outline-container-org9fd0f4d" class="outline-4">
-<h4 id="org9fd0f4d">Redirection</h4>
-<div class="outline-text-4" id="text-org9fd0f4d">
+<div id="outline-container-org7fbc7dc" class="outline-4">
+<h4 id="org7fbc7dc">Redirection</h4>
+<div class="outline-text-4" id="text-org7fbc7dc">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -174,9 +174,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orgc2d292d" class="outline-3">
-<h3 id="orgc2d292d">Drafts</h3>
-<div class="outline-text-3" id="text-orgc2d292d">
+<div id="outline-container-org12a2b44" class="outline-3">
+<h3 id="org12a2b44">Drafts</h3>
+<div class="outline-text-3" id="text-org12a2b44">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -193,9 +193,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgfebd4fd" class="outline-2">
-<h2 id="orgfebd4fd">License</h2>
-<div class="outline-text-2" id="text-orgfebd4fd">
+<section id="outline-container-orgfabfb55" class="outline-2">
+<h2 id="orgfabfb55">License</h2>
+<div class="outline-text-2" id="text-orgfabfb55">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -209,7 +209,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 06 Jul. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 19 Dec. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
