--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 06 Jul. 2023 -->
+<!-- 19 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Duncan Mac-Vicar P.</title>
@@ -51,15 +51,15 @@
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-org5b9d28a" class="outline-2 post-list">
-<h2 id="org5b9d28a"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-org5b9d28a">
+<section id="outline-container-orgb1108e5" class="outline-2 post-list">
+<h2 id="orgb1108e5"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-orgb1108e5">
 <ul class="org-ul">
+<li><span class="timestamp-wrapper"><span class="timestamp">18 Dec 2024</span></span>  <a href="posts/2024-12-18-the-aero/index.html">The Aero: restoring a Compaq Contura Aero 4/33C</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">19 Jan 2023</span></span>  <a href="posts/2023-01-19-personal-picks/index.html">2022 picks: software projects to keep an eye on</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">20 Oct 2020</span></span>  <a href="posts/2020-10-20-migrating-away-google-services/index.html">Migrating away from Google services</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">14 Sep 2020</span></span>  <a href="posts/2020-09-14-prose-linting-vale-emacs.org/index.html">Prose linting with Vale and Emacs</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">07 Sep 2020</span></span>  <a href="posts/2020-09-07-k3s-on-rpi-with-salt/index.html">Raspberry Pi cluster with k3s &amp; Salt (Part 1)</a></li>
-<li><span class="timestamp-wrapper"><span class="timestamp">03 Sep 2019</span></span>  <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">Migrating from Jekyll to org-mode and Github Actions</a></li>
 </ul>
 
 <p>
@@ -70,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org8a9e0cb" class="outline-2 post-list">
-<h2 id="org8a9e0cb"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-org8a9e0cb">
+<section id="outline-container-orgaf8e2e2" class="outline-2 post-list">
+<h2 id="orgaf8e2e2"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-orgaf8e2e2">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -91,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-orgb71cab5" class="outline-2 post-list">
-<h2 id="orgb71cab5"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-orgb71cab5">
+<section id="outline-container-orgad661ea" class="outline-2 post-list">
+<h2 id="orgad661ea"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-orgad661ea">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
@@ -103,7 +103,7 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 06 Jul. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 19 Dec. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
