--- a/software.html
+++ b/software.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 06 Jul. 2023 -->
+<!-- 19 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>&lrm;</title>
@@ -47,17 +47,17 @@
  <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
 </header>
 <main id="content">
-<section id="outline-container-org279e427" class="outline-2">
-<h2 id="org279e427">Reflections on software development</h2>
-<div class="outline-text-2" id="text-org279e427">
+<section id="outline-container-org7bf3ba0" class="outline-2">
+<h2 id="org7bf3ba0">Reflections on software development</h2>
+<div class="outline-text-2" id="text-org7bf3ba0">
 <p>
 These get updated from time to time, as I fail and learn.
 </p>
 </div>
 
-<div id="outline-container-orgccd2b11" class="outline-3">
-<h3 id="orgccd2b11">On Agile</h3>
-<div class="outline-text-3" id="text-orgccd2b11">
+<div id="outline-container-org41d5809" class="outline-3">
+<h3 id="org41d5809">On Agile</h3>
+<div class="outline-text-3" id="text-org41d5809">
 <ul class="org-ul">
 <li>I have seen software succeed and fail on all processes and
 methodologies.</li>
@@ -71,9 +71,9 @@ the team set and document their preferred workflow and then iterate on it.</li>
 </div>
 </div>
 
-<div id="outline-container-org31992b5" class="outline-3">
-<h3 id="org31992b5">On Bugs and features</h3>
-<div class="outline-text-3" id="text-org31992b5">
+<div id="outline-container-orgeddd7be" class="outline-3">
+<h3 id="orgeddd7be">On Bugs and features</h3>
+<div class="outline-text-3" id="text-orgeddd7be">
 <ul class="org-ul">
 <li>Bug backlogs are a bad idea. If you have a large one, toss it away.
 (they may be justified if you provide L3 service to a customer)</li>
@@ -87,9 +87,9 @@ pair/mob programming, collaboration, reviews, linters, tests, automation</li>
 </div>
 </div>
 
-<div id="outline-container-org9250527" class="outline-3">
-<h3 id="org9250527">On technologies</h3>
-<div class="outline-text-3" id="text-org9250527">
+<div id="outline-container-orgf3b9f97" class="outline-3">
+<h3 id="orgf3b9f97">On technologies</h3>
+<div class="outline-text-3" id="text-orgf3b9f97">
 <ul class="org-ul">
 <li>Prefer boring, open-source technology that has been around for a
 while, which active base and prospect of maintainership.</li>
@@ -106,9 +106,9 @@ Javascript ecosystem culture is not right (moving on to new things over maintain
 </div>
 </div>
 
-<div id="outline-container-org041b263" class="outline-3">
-<h3 id="org041b263">On leadership and skills</h3>
-<div class="outline-text-3" id="text-org041b263">
+<div id="outline-container-orgc4bc608" class="outline-3">
+<h3 id="orgc4bc608">On leadership and skills</h3>
+<div class="outline-text-3" id="text-orgc4bc608">
 <ul class="org-ul">
 <li>Promote those who act to make things better. Complaining and
 pointing out things that suck is too easy.</li>
@@ -121,9 +121,9 @@ pointing out things that suck is too easy.</li>
 </div>
 </div>
 
-<div id="outline-container-orgb7cca2f" class="outline-3">
-<h3 id="orgb7cca2f">On communication</h3>
-<div class="outline-text-3" id="text-orgb7cca2f">
+<div id="outline-container-org200305e" class="outline-3">
+<h3 id="org200305e">On communication</h3>
+<div class="outline-text-3" id="text-org200305e">
 <ul class="org-ul">
 <li>If you will work remotely and asynchronous, you and your
 organization will need to learn to write well.</li>
@@ -136,9 +136,9 @@ simple at first sight.</li>
 </div>
 </div>
 
-<div id="outline-container-org7fe7745" class="outline-3">
-<h3 id="org7fe7745">On technical debt and legacy systems</h3>
-<div class="outline-text-3" id="text-org7fe7745">
+<div id="outline-container-org43c86ff" class="outline-3">
+<h3 id="org43c86ff">On technical debt and legacy systems</h3>
+<div class="outline-text-3" id="text-org43c86ff">
 <ul class="org-ul">
 <li>The term &ldquo;technical debt&rdquo; is overused in meaning, exagerated
 and little acted upon.</li>
@@ -172,7 +172,7 @@ while keeping things working.</li>
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 06 Jul. 2023. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
+<p>Last updated 19 Dec. 2024. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
