--- a/tutorials/rpm-packaging/index.html
+++ b/tutorials/rpm-packaging/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 06 Jul. 2023 -->
+<!-- 19 Dec. 2024 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>RPM Packaging Tutorial</title>
@@ -9,9 +9,11 @@
 <meta name="author" content="Duncan Mac-Vicar P.">
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/htmlize.css"/>
 <link rel="stylesheet" type="text/css" href="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/css/readtheorg.css"/>
+<link rel="stylesheet" type="text/css" href="src/readtheorg_theme/css/search.css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/lib/js/jquery.stickytableheaders.min.js"></script>
+<script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/search.js"></script>
 <script type="text/javascript" src="https://fniessen.github.io/org-html-themes/src/readtheorg_theme/js/readtheorg.js"></script>
 <script type="text/javascript">
 // @license magnet:?xt=urn:btih:e95b018ef3580986a04669f1b5879592219e2a7a&dn=public-domain.txt Public Domain
@@ -210,7 +212,7 @@ Lets start with a famous UNIX tool: <code>rsync</code>.
 So a package is an archive file:
 </p>
 
-<pre class="example" id="orgc3e7404">
+<pre class="example" id="orga2998f4">
 rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -218,7 +220,7 @@ rsync-3.1.2-1.5.x86_64.rpm
 containing all files related to the application:
 </p>
 
-<pre class="example" id="org722c52a">
+<pre class="example" id="org23ccd12">
 $ rpm -qpl rsync-3.1.2-1.5.x86_64.rpm
 
 /etc/logrotate.d/rsync
@@ -249,7 +251,7 @@ to:
 <li><code>Name</code>, <code>Summary</code>, <code>Description</code>, <code>License</code>, etc.</li>
 </ul>
 
-<pre class="example" id="orgb7c96c9">
+<pre class="example" id="org04f3eea">
 $ rpm -qpi rsync-3.1.2-1.5.x86_64.rpm
 
 Name        : rsync
@@ -286,7 +288,7 @@ Distribution: openSUSE Tumbleweed
 (<code>Requires</code>)</li>
 </ul>
 
-<pre class="example" id="org921f74e">
+<pre class="example" id="orgccb97f3">
 $ rpm -qp --requires rsync-3.1.2-1.5.x86_64.rpm
 /bin/sh
 /usr/bin/perl
@@ -327,7 +329,7 @@ called during runtime.
 <li>What does the package provide for other packages to work (<code>Provides</code>)</li>
 </ul>
 
-<pre class="example" id="org75ba7ad">
+<pre class="example" id="org9f513c2">
 $ rpm -qp --provides rsync-3.1.2-1.5.x86_64.rpm
 config(rsync) = 3.1.2-1.5
 rsync = 3.1.2-1.5
@@ -356,7 +358,7 @@ level.
 Packages can be installed with the <code>rpm</code> tools:
 </p>
 
-<pre class="example" id="org0b66b18">
+<pre class="example" id="orgae192d7">
 $ rpm -U rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -367,7 +369,7 @@ the <code>-p</code> option and use what is called the NVRA
 subset of it, e.g. just name (<code>rsync</code>).
 </p>
 
-<pre class="example" id="orgd2760df">
+<pre class="example" id="orgb1cbab6">
 $ rpm -q --provides rsync
 </pre>
 
@@ -433,7 +435,7 @@ build system scanned the executable <code>/usr/lib/rsync</code> and realized it 
 linked against <code>libc.so.6</code>:
 </p>
 
-<pre class="example" id="org4fb04c7">
+<pre class="example" id="org9f0aa5a">
 $ ldd /usr/bin/rsync
         linux-vdso.so.1 (0x00007ffccb34a000)
         libacl.so.1 =&gt; /lib64/libacl.so.1 (0x00007fc406028000)
@@ -462,7 +464,7 @@ only <code>Requires: libsound</code> (as in package name). Then when he/she trie
 to run it:
 </p>
 
-<pre class="example" id="orgcf65a34">
+<pre class="example" id="orga199794">
 $ musicplayer
 error while loading shared libraries: libsound.so.7: cannot open shared object file: No such file or directory
 </pre>
@@ -573,7 +575,7 @@ includes a command-line tool called <code>zypper</code>. While tools like
 console you will likely interact with <code>zypper</code>.
 </p>
 
-<pre class="example" id="org921b827">
+<pre class="example" id="org01322fc">
 $ zypper install rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -616,7 +618,7 @@ package, and then rpm files are retrieved on demand at installation
 time.
 </p>
 
-<pre class="example" id="orgbbceffd">
+<pre class="example" id="org5a61527">
 $ zypper lr
 
 # | Alias          | Name           | Enabled | GPG Check | Refresh
@@ -678,7 +680,7 @@ rpm files into its cache.
 <div id="outline-container-refreshing-a-repository" class="outline-4">
 <h4 id="refreshing-a-repository">Refreshing a repository</h4>
 <div class="outline-text-4" id="text-refreshing-a-repository">
-<pre class="example" id="org9675d59">
+<pre class="example" id="orgc1191c4">
 $ zypper ref
 </pre>
 
@@ -810,7 +812,7 @@ Patterns are used to install a collection of software in a comfortable
 way. For example you can install a working Laptop-oriented system with:
 </p>
 
-<pre class="example" id="org47dc447">
+<pre class="example" id="orgc6185ab">
 $ zypper install -t pattern laptop
 </pre>
 
@@ -839,7 +841,7 @@ of the magic behind patterns (equivalent to
 Similar to patterns, products can be queried with:
 </p>
 
-<pre class="example" id="org727eab4">
+<pre class="example" id="org84954d8">
 $ zypper search -t product
 </pre>
 
@@ -882,7 +884,7 @@ package manager will dynamically read <code>/sys/devices</code> and make this
 entity have provides like:
 </p>
 
-<pre class="example" id="org69440f1">
+<pre class="example" id="org6fb4a76">
 Provides :modalias(pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 </pre>
 
@@ -891,7 +893,7 @@ Then, a package providing a WLAN driver for some cards (e.g.
 <code>wlan-kmp-default</code>), could have the following dependencies:
 </p>
 
-<pre class="example" id="orga39c53f">
+<pre class="example" id="org25015f6">
 Supplements: modalias(kernel-default:pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v0000104Cd00009066sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v000010B7d00006000sv*sd*bc*sc*i*)
@@ -940,7 +942,7 @@ injected as we already mentioned), and how the content of the package is
 created. A very simple spec file would be:
 </p>
 
-<pre class="example" id="org1b9ba58">
+<pre class="example" id="org629dddc">
 Name:           mypackage
 Version:        1.0
 Release:        0
@@ -988,7 +990,7 @@ like <code>%{_prefix}</code>, <code>%{_datadir}</code>, <code>%{_mandir}</code>,
 <code>%{_bindir}</code>, etc. You can evaluate a macro like this:
 </p>
 
-<pre class="example" id="orga3c81ce">
+<pre class="example" id="org3bc0094">
 $ rpm --eval "%{_libdir}"
 /usr/lib64
 </pre>
@@ -1041,7 +1043,7 @@ file to be in a specific location, so I usually tweak the standard
 configuration so that spec files are searched in the current directory:
 </p>
 
-<pre class="example" id="org07fd400">
+<pre class="example" id="orgae125df">
 $ cat ~/.rpmmacros
 %topdir /space/packages
 %_builddir %{topdir}/build
@@ -1060,7 +1062,7 @@ As you can see, I also configure it so that built packages are saved in
 Once I have this setup, I can do:
 </p>
 
-<pre class="example" id="orga2b1280">
+<pre class="example" id="org1c1fed4">
 $ rpmbuild -bb mypackage.spec
 Executing(%install): /bin/sh -e /var/tmp/rpm-tmp.lVzwnj
 + umask 022
@@ -1085,7 +1087,7 @@ Executing(%clean): /bin/sh -e /var/tmp/rpm-tmp.0xLGri
 Now I can verify the content of the package:
 </p>
 
-<pre class="example" id="orgf858773">
+<pre class="example" id="org9627359">
 % rpm -qpl /space/packages/rpms/x86_64/mypackage-1.0-0.x86_64.rpm
 /usr/share/mypackage/CONTENT
 </pre>
@@ -1145,7 +1147,7 @@ On the other hand, the original <code>oracle-instantclient-sqlplus</code> packag
 is required at runtime, but we don&rsquo;t need it to build our package.
 </p>
 
-<pre class="example" id="org6545038">
+<pre class="example" id="orgf4ea621">
 Name:           gqlplus
 Version:        1.15
 Release:        0
@@ -1213,7 +1215,7 @@ installed by the -devel packages, it will be scanned and the right
 <code>Requires</code> injected:
 </p>
 
-<pre class="example" id="org8057902">
+<pre class="example" id="org150c288">
 $ rpm -qp --requires gqlplus-1.15-0.x86_64.rpm
 libc.so.6()(64bit)
 ...
@@ -1228,7 +1230,7 @@ These symbols are provided by the right package, so the solver will
 match them:
 </p>
 
-<pre class="example" id="org5adc7e0">
+<pre class="example" id="orga5ce09b">
 rpm -q --whatprovides 'libncurses.so.6()(64bit)'
 libncurses6-6.0-19.1.x86_64
 </pre>
@@ -1299,7 +1301,7 @@ right order and re-published.
 </p>
 
 
-<figure id="orgb4d8dc0">
+<figure id="orgefc20ec">
 <img src="images/gqlplus-obs.png" alt="gqlplus-obs.png">
 
 </figure>
@@ -1323,7 +1325,7 @@ With the <code>osc</code> tool you can checkout packages from OBS, make changes 
 resubmit them.
 </p>
 
-<pre class="example" id="orgbebbd5d">
+<pre class="example" id="org741f843">
 $ osc co home:dmacvicar gqlplus
 A    home:dmacvicar
 A    home:dmacvicar/gqlplus
@@ -1343,7 +1345,7 @@ machine), setting up that environment automatically using the
 a different distribution than the one you are running.
 </p>
 
-<pre class="example" id="orgf9f8eff">
+<pre class="example" id="org2266d94">
 $ cd home:dmacvicar/gqlplus
 $ osc build openSUSE_Leap_42.2
 ...
@@ -1372,7 +1374,7 @@ sources by hundreds of contributors.
 The <code>spec-cleaner</code> tool can help you keeping your spec file in shape:
 </p>
 
-<pre class="example" id="org8ff407e">
+<pre class="example" id="org8b387d9">
 $ spec-cleaner -i gqlplus.spec
 </pre>
 
@@ -1424,7 +1426,7 @@ developed. It is easy to find the devel project using the <code>develproject</co
 (<code>dp</code>) command:
 </p>
 
-<pre class="example" id="org166b8c6">
+<pre class="example" id="org6d6d4ef">
 $ osc dp openSUSE:Factory rsync
 network
 </pre>
@@ -1434,7 +1436,7 @@ Create a branch and a local checkout of the package using the <code>branch</code
 command:
 </p>
 
-<pre class="example" id="org1d08213">
+<pre class="example" id="orgb3cf37e">
 $ osc bco network rsync
 A    home:dmacvicar:branches:network
 A    home:dmacvicar:branches:network/rsync
@@ -1465,7 +1467,7 @@ into the devel project. To do this, use the <code>submitrequest</code> (<code>sr
 command:
 </p>
 
-<pre class="example" id="org4a55517">
+<pre class="example" id="orgfc246e2">
 $ osc sr
 </pre>
 
@@ -1484,7 +1486,7 @@ needed, however.
 <footer id="postamble" class="status">
 <p class="date">Date: 2017-03-08</p>
 <p class="author">Author: Duncan Mac-Vicar P.</p>
-<p class="date">Created: 06 Jul. 2023</p>
+<p class="date">Created: 19 Dec. 2024</p>
 </footer>
 </body>
 </html>
