deploy: 976c55d956ddb5ba144de5fb65b74891e250a6b1

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-orgb1108e5" class="outline-2 post-list">
-<h2 id="orgb1108e5"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-orgb1108e5">
+<section id="outline-container-orge49fc23" class="outline-2 post-list">
+<h2 id="orge49fc23"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-orge49fc23">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">18 Dec 2024</span></span>  <a href="posts/2024-12-18-the-aero/index.html">The Aero: restoring a Compaq Contura Aero 4/33C</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">19 Jan 2023</span></span>  <a href="posts/2023-01-19-personal-picks/index.html">2022 picks: software projects to keep an eye on</a></li>
@@ -70,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-orgaf8e2e2" class="outline-2 post-list">
-<h2 id="orgaf8e2e2"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-orgaf8e2e2">
+<section id="outline-container-org4b0a54c" class="outline-2 post-list">
+<h2 id="org4b0a54c"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-org4b0a54c">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -91,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-orgad661ea" class="outline-2 post-list">
-<h2 id="orgad661ea"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-orgad661ea">
+<section id="outline-container-org1d315be" class="outline-2 post-list">
+<h2 id="org1d315be"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-org1d315be">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
