--- a/software.html
+++ b/software.html
@@ -47,17 +47,17 @@
  <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
 </header>
 <main id="content">
-<section id="outline-container-org7bf3ba0" class="outline-2">
-<h2 id="org7bf3ba0">Reflections on software development</h2>
-<div class="outline-text-2" id="text-org7bf3ba0">
+<section id="outline-container-org50a2569" class="outline-2">
+<h2 id="org50a2569">Reflections on software development</h2>
+<div class="outline-text-2" id="text-org50a2569">
 <p>
 These get updated from time to time, as I fail and learn.
 </p>
 </div>
 
-<div id="outline-container-org41d5809" class="outline-3">
-<h3 id="org41d5809">On Agile</h3>
-<div class="outline-text-3" id="text-org41d5809">
+<div id="outline-container-orge006e11" class="outline-3">
+<h3 id="orge006e11">On Agile</h3>
+<div class="outline-text-3" id="text-orge006e11">
 <ul class="org-ul">
 <li>I have seen software succeed and fail on all processes and
 methodologies.</li>
@@ -71,9 +71,9 @@ the team set and document their preferred workflow and then iterate on it.</li>
 </div>
 </div>
 
-<div id="outline-container-orgeddd7be" class="outline-3">
-<h3 id="orgeddd7be">On Bugs and features</h3>
-<div class="outline-text-3" id="text-orgeddd7be">
+<div id="outline-container-orgd8bc6f8" class="outline-3">
+<h3 id="orgd8bc6f8">On Bugs and features</h3>
+<div class="outline-text-3" id="text-orgd8bc6f8">
 <ul class="org-ul">
 <li>Bug backlogs are a bad idea. If you have a large one, toss it away.
 (they may be justified if you provide L3 service to a customer)</li>
@@ -87,9 +87,9 @@ pair/mob programming, collaboration, reviews, linters, tests, automation</li>
 </div>
 </div>
 
-<div id="outline-container-orgf3b9f97" class="outline-3">
-<h3 id="orgf3b9f97">On technologies</h3>
-<div class="outline-text-3" id="text-orgf3b9f97">
+<div id="outline-container-org4c23c01" class="outline-3">
+<h3 id="org4c23c01">On technologies</h3>
+<div class="outline-text-3" id="text-org4c23c01">
 <ul class="org-ul">
 <li>Prefer boring, open-source technology that has been around for a
 while, which active base and prospect of maintainership.</li>
@@ -106,9 +106,9 @@ Javascript ecosystem culture is not right (moving on to new things over maintain
 </div>
 </div>
 
-<div id="outline-container-orgc4bc608" class="outline-3">
-<h3 id="orgc4bc608">On leadership and skills</h3>
-<div class="outline-text-3" id="text-orgc4bc608">
+<div id="outline-container-orgdf924f0" class="outline-3">
+<h3 id="orgdf924f0">On leadership and skills</h3>
+<div class="outline-text-3" id="text-orgdf924f0">
 <ul class="org-ul">
 <li>Promote those who act to make things better. Complaining and
 pointing out things that suck is too easy.</li>
@@ -121,9 +121,9 @@ pointing out things that suck is too easy.</li>
 </div>
 </div>
 
-<div id="outline-container-org200305e" class="outline-3">
-<h3 id="org200305e">On communication</h3>
-<div class="outline-text-3" id="text-org200305e">
+<div id="outline-container-org33cbb87" class="outline-3">
+<h3 id="org33cbb87">On communication</h3>
+<div class="outline-text-3" id="text-org33cbb87">
 <ul class="org-ul">
 <li>If you will work remotely and asynchronous, you and your
 organization will need to learn to write well.</li>
@@ -136,9 +136,9 @@ simple at first sight.</li>
 </div>
 </div>
 
-<div id="outline-container-org43c86ff" class="outline-3">
-<h3 id="org43c86ff">On technical debt and legacy systems</h3>
-<div class="outline-text-3" id="text-org43c86ff">
+<div id="outline-container-org9e0dd4a" class="outline-3">
+<h3 id="org9e0dd4a">On technical debt and legacy systems</h3>
+<div class="outline-text-3" id="text-org9e0dd4a">
 <ul class="org-ul">
 <li>The term &ldquo;technical debt&rdquo; is overused in meaning, exagerated
 and little acted upon.</li>
