--- a/README.html
+++ b/README.html
@@ -50,33 +50,33 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org4c0fb0d">
+<figure id="org12d4840">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
 </figure>
 
-<section id="outline-container-org69442c3" class="outline-2">
-<h2 id="org69442c3">Introduction</h2>
-<div class="outline-text-2" id="text-org69442c3">
+<section id="outline-container-org7992fa8" class="outline-2">
+<h2 id="org7992fa8">Introduction</h2>
+<div class="outline-text-2" id="text-org7992fa8">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org3a4d9d2" class="outline-2">
-<h2 id="org3a4d9d2">Implementation</h2>
-<div class="outline-text-2" id="text-org3a4d9d2">
+<section id="outline-container-orga66d84f" class="outline-2">
+<h2 id="orga66d84f">Implementation</h2>
+<div class="outline-text-2" id="text-orga66d84f">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org8ca5f6f" class="outline-2">
-<h2 id="org8ca5f6f">Usage</h2>
-<div class="outline-text-2" id="text-org8ca5f6f">
+<section id="outline-container-orga2467c7" class="outline-2">
+<h2 id="orga2467c7">Usage</h2>
+<div class="outline-text-2" id="text-orga2467c7">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -87,7 +87,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org54351e5">
+<pre class="example" id="org5212e39">
 $ make
 </pre>
 
@@ -96,9 +96,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org7b2ca27" class="outline-3">
-<h3 id="org7b2ca27">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org7b2ca27">
+<div id="outline-container-orgc32cdcb" class="outline-3">
+<h3 id="orgc32cdcb">RSS Feeds</h3>
+<div class="outline-text-3" id="text-orgc32cdcb">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -155,13 +155,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-orge190af4" class="outline-2">
-<h2 id="orge190af4">Features</h2>
-<div class="outline-text-2" id="text-orge190af4">
+<section id="outline-container-org365591d" class="outline-2">
+<h2 id="org365591d">Features</h2>
+<div class="outline-text-2" id="text-org365591d">
 </div>
-<div id="outline-container-org7fbc7dc" class="outline-4">
-<h4 id="org7fbc7dc">Redirection</h4>
-<div class="outline-text-4" id="text-org7fbc7dc">
+<div id="outline-container-org1d89035" class="outline-4">
+<h4 id="org1d89035">Redirection</h4>
+<div class="outline-text-4" id="text-org1d89035">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -174,9 +174,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-org12a2b44" class="outline-3">
-<h3 id="org12a2b44">Drafts</h3>
-<div class="outline-text-3" id="text-org12a2b44">
+<div id="outline-container-org3cbdcb5" class="outline-3">
+<h3 id="org3cbdcb5">Drafts</h3>
+<div class="outline-text-3" id="text-org3cbdcb5">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -193,9 +193,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-orgfabfb55" class="outline-2">
-<h2 id="orgfabfb55">License</h2>
-<div class="outline-text-2" id="text-orgfabfb55">
+<section id="outline-container-org0a9e67a" class="outline-2">
+<h2 id="org0a9e67a">License</h2>
+<div class="outline-text-2" id="text-org0a9e67a">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
