--- a/setup.html
+++ b/setup.html
@@ -50,9 +50,9 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-orge422f08" class="outline-2">
-<h2 id="orge422f08">General setup</h2>
-<div class="outline-text-2" id="text-orge422f08">
+<section id="outline-container-orge54abeb" class="outline-2">
+<h2 id="orge54abeb">General setup</h2>
+<div class="outline-text-2" id="text-orge54abeb">
 <p>
 I like Thinkpads. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012.
@@ -112,9 +112,9 @@ I also have a small Home &ldquo;Lab&rdquo;
 </div>
 </section>
 
-<section id="outline-container-orgc13458e" class="outline-2">
-<h2 id="orgc13458e">Work</h2>
-<div class="outline-text-2" id="text-orgc13458e">
+<section id="outline-container-orgaa7fa07" class="outline-2">
+<h2 id="orgaa7fa07">Work</h2>
+<div class="outline-text-2" id="text-orgaa7fa07">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -131,9 +131,9 @@ This setup is kept in an internal dotfiles repository.
 </p>
 </div>
 
-<div id="outline-container-orgf48afdd" class="outline-4">
-<h4 id="orgf48afdd">Other</h4>
-<div class="outline-text-4" id="text-orgf48afdd">
+<div id="outline-container-org64d6ca9" class="outline-4">
+<h4 id="org64d6ca9">Other</h4>
+<div class="outline-text-4" id="text-org64d6ca9">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
 <li><a href="https://www.jabra.com.de/business/speakerphones/jabra-speak-series/jabra-speak-510">Jabra  Speak 510+</a> and <a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
@@ -142,9 +142,9 @@ This setup is kept in an internal dotfiles repository.
 </div>
 </section>
 
-<section id="outline-container-org65d9eed" class="outline-2">
-<h2 id="org65d9eed">Development environment</h2>
-<div class="outline-text-2" id="text-org65d9eed">
+<section id="outline-container-org8fca1cf" class="outline-2">
+<h2 id="org8fca1cf">Development environment</h2>
+<div class="outline-text-2" id="text-org8fca1cf">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
@@ -158,27 +158,27 @@ many languages. My go-to languages are C++, Golang and <del>Ruby</del> Python de
 </ul>
 </div>
 
-<div id="outline-container-org118bb57" class="outline-4">
-<h4 id="org118bb57">C++</h4>
-<div class="outline-text-4" id="text-org118bb57">
+<div id="outline-container-orgc460681" class="outline-4">
+<h4 id="orgc460681">C++</h4>
+<div class="outline-text-4" id="text-orgc460681">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc0f9dd8" class="outline-4">
-<h4 id="orgc0f9dd8">Ruby</h4>
-<div class="outline-text-4" id="text-orgc0f9dd8">
+<div id="outline-container-org84a5a91" class="outline-4">
+<h4 id="org84a5a91">Ruby</h4>
+<div class="outline-text-4" id="text-org84a5a91">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb239edf" class="outline-4">
-<h4 id="orgb239edf">Golang</h4>
-<div class="outline-text-4" id="text-orgb239edf">
+<div id="outline-container-org7186934" class="outline-4">
+<h4 id="org7186934">Golang</h4>
+<div class="outline-text-4" id="text-org7186934">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
