--- a/readme.html
+++ b/readme.html
@@ -43,7 +43,7 @@
 <h1>My homepage with org-mode</h1>
 <div class="content">
   
-<figure id="org9357c39">
+<figure id="orgb89a4b3">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
@@ -91,6 +91,6 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
  
  <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org/">Org</a> mode 9.4.4). <a href="http://localhost:8000/readme.html">Details</a>.</p>
+  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> undefined (<a href="https://orgmode.org/">Org</a> mode undefined). <a href="http://localhost:8000/readme.html">Details</a>.</p>
 </body>
 </html>
