deploy: 5096059040182bac921033af8ffb12106581a77b

--- a/readme.html
+++ b/readme.html
@@ -43,7 +43,7 @@
 <h1>My homepage with org-mode</h1>
 <div class="content">
   
-<figure id="orgb89a4b3">
+<figure id="org7d39fa4">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
